# midas

./: .gitignore  Cargo.toml  PYTHON_TOOLING_DECISION.md  binance_tickers.json  library_management.md  notes.md  pyproject.toml  tooling.md
agora/: Cargo.toml  README.md  cargo2.toml  pyproject.toml  refactor.md  sudo
agora/agora/: Cargo.toml  README.md
agora/agora/python/agora/: __init__.py
agora/agora/src/: constants.rs  core.rs  lib.rs  main.rs  metaserver.rs  ping.rs  ports.rs  pywrappers.rs  rawstream.rs  utils.rs
agora/agora/src/core/: client.rs  common.rs  protocol.rs  publisher.rs  subscriber.rs
agora/agora/src/examples/: data_types.rs
agora/agora/src/metaserver/: client.rs  common.rs  protocol.rs  publisher_info.rs  server.rs
agora/agora/src/ping/: client.rs  common.rs  server.rs
agora/agora/src/pywrappers/: subscribers.rs
agora/agora/src/rawstream/: client.rs  protocol.rs  server.rs
agora/agora/src/rpc/: client.rs  common.rs  server.rs
agora/agora/src/utils/: addresses.rs  pathtree.rs  stream_to_iter.rs  utils.rs
agora/agora/tests/: address_manager.rs  metaserver.rs  pathtree.rs  process.rs
agora/python/agora/: __init__.py  more.py
agora/python/tests/: test_all.py
agora/setup/: cleanup_old_ipv6.sh  persistent_ipv6_setup.sh
agora/src/: constants.rs  core.rs  gateway.rs  lib.rs  metaserver.rs  ping.rs  pywrappers.rs  rawstream.rs  relay.rs  utils.rs
agora/src/core/: common.rs  publisher.rs  subscriber.rs
agora/src/metaserver/: README.md  client.rs  protocol.rs  publisher_info.rs  server.rs  state.rs
agora/src/ping/: client.rs  server.rs
agora/src/pywrappers/: async_helpers.rs  connection_handle.rs  publishers.rs  relays.rs  subscribers.rs
agora/src/rawstream/: client.rs  server.rs
agora/src/utils/: addresses.rs  common.rs  pathtree.rs  utils.rs
agora/tests/: README.md  address_manager.rs  metaserver.rs  pathtree.rs
agora/tests/common/: mod.rs
argus/: Cargo.toml  README.md  constants.rs  lib.rs  script.py  types.rs
argus/python/: hive.py
argus/python/hyperliquid/: README.md  requirements.txt  rest_api_example.py  rest_example.logs  spot_rest_api_example.py  spot_websocket_example.py  stream_top_perps.py  websocket_example.py
argus/src/: constants.rs  crypto.rs  lib.rs  recording.rs  scribe.rs  types.rs
argus/src/crypto/: binance.rs  hyperliquid.rs
argus/src/crypto/binance/: bbo.rs  datatypes.rs  main.rs  orderbook.rs  publisher.rs  scribe.rs  trade.rs  trades.rs
argus/src/crypto/hyperliquid/: bbo.rs  orderbook.rs  perp_context.rs  publisher.rs  scribe.rs  spot_context.rs  trades.rs  universe.rs  webstream.rs  writer.rs
argus/src/recording/: archiver.rs  tempfile.rs
argus/src/scribe/: archiver.rs  file.rs
argus/tests/: types.rs
atlas/: .gitignore  Cargo.toml  pyproject.toml  run_ctdp_app.py
atlas/notebook/: plotting_dev.ipynb  slice_plots_app.py  test_step1.py  test_step2.py  test_step3.py
atlas/notebook/.ipynb_checkpoints/: plotting_dev-checkpoint.ipynb
atlas/notebook/dev/: plotting_dev.ipynb  test_refactored_api.py  test_step4.py  test_step5.py
atlas/notebook/examples/: ctdp_quickstart.py
atlas/python/atlas/: __init__.py  multiprocessing.py  utils.py
atlas/python/atlas/caching/: __init__.py  file.py  parquet.py
atlas/python/atlas/ctdp/: README.md  __init__.py  app.py  config.py  formatting.py  plotting.py  state.py
atlas/src/: lib.rs
horoscope/: Cargo.toml
horoscope/src/: main.rs
metis/: Cargo.toml  README.md  pyproject.toml
metis/notebooks/: dev.ipynb  pipeline_dev.ipynb  plotting_dev.ipynb
metis/notebooks/examples/: feature_processing.ipynb
metis/python/metis/: __init__.py
metis/python/metis/featurepipeline/: __init__.py  operations.py  pipeline.py
metis/python/metis/plotting/: __init__.py  array.py  interactive.py  polars.py
metis/python/metis/utils/: __init__.py  indexing.py  torchops.py
metis/src/: lib.rs
mnemosyne/: Cargo.toml  QUICK_START.md  README.md  pyproject.toml
mnemosyne/mnemosyne/: __init__.py  constants.py  data.py  multiprocessing.py  utils.py
mnemosyne/mnemosyne/crypto/binance/: s3_helpers.py
mnemosyne/notebooks/workflows/binance/: explore_binance_gridded.ipynb  grid_dataset.ipynb  grid_datasets.ipynb  research-dataset.ipynb  update_lossless_trades.sh  verify_downloads.py
mnemosyne/notebooks/workflows/binance/.ipynb_checkpoints/: grid_dataset-checkpoint.ipynb
mnemosyne/notebooks/workflows/dev/: dev_binance_data_download.py  dev_grid.ipynb  dev_hyperliquid_market.ipynb  dev_metadata copy.ipynb  dev_metadata.ipynb  dev_package.ipynb  dev_research_datasets.ipynb  dev_returns.ipynb
mnemosyne/notebooks/workflows/dev/.ipynb_checkpoints/: dev_metadata-checkpoint.ipynb
mnemosyne/notebooks/workflows/dev/metadata/: validated_partitions.json
mnemosyne/notebooks/workflows/examples/: binance_raw_returns.ipynb  get_returns.ipynb  mnemosyne_binance_tutorial.ipynb  mnemosyne_tutorial.ipynb  relevant_dataframes.ipynb
mnemosyne/notebooks/workflows/examples/.ipynb_checkpoints/: binance_raw_returns-checkpoint.ipynb
mnemosyne/notebooks/workflows/hyperliquid/: verify_downloads.py
mnemosyne/python/mnemosyne/: __init__.py
mnemosyne/python/mnemosyne/binance/: __init__.py  last_trade.py  lossless.py  research.py
mnemosyne/python/mnemosyne/dataset/: __init__.py  cached_universe.py  dataset_types.py  interface.py  parquet.py
mnemosyne/python/mnemosyne/engines/: __init__.py  basic_metadata.py  metadata.py  returns copy 2.py  returns copy.py  returns.py
mnemosyne/src/: constants.rs  crypto.rs  datasets.rs  lib.rs
mnemosyne/src/crypto/: binance.rs  hyperliquid.rs
mnemosyne/src/crypto/binance/: last_trades.rs  s3_helpers.rs
mnemosyne/src/crypto/hyperliquid/: l2book.rs
template/: Cargo.toml  README.md  pyproject.toml
template/python/template/: __init__.py
template/src/: lib.rs
tutorials/rpc/json-tarpc/: Cargo.toml  sample_commands.md
tutorials/rpc/json-tarpc/src/: client.rs  lib.rs  main.rs  server.rs
tutorials/tokio/: Cargo.toml
tutorials/tokio/my-redis/: Cargo.toml
tutorials/tokio/my-redis/examples/: hello-redis.rs  simple-futures.rs
(+1 files in other folders)
