[package]
name = "agora"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "metaserver"
path = "src/bin/metaserver.rs"

[[bin]]
name = "metaclient"
path = "src/bin/metaclient.rs"

[[bin]]
name = "rawstreamserver"
path = "src/bin/rawstreamserver.rs"

[[bin]]
name = "rawstreamclient"
path = "src/bin/rawstreamclient.rs"

[[bin]]
name = "publisher_example"
path = "src/bin/publisher_example.rs"

[[bin]]
name = "subscriber_example"
path = "src/bin/subscriber_example.rs"

[lib]
name = "agora"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.100"
arrow = "56.2.0"
async-stream = "0.3.6"
bincode = { version = "2.0.1", features = ["serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
derive-new = "0.7.0"
futures = "0.3.31"
futures-util = "0.3.31"
indoc = "2.0.6"
postcard = { version = "1.1.3", features = ["alloc"] }
pyo3 = "0.26.0"
rand = "0.9.2"
rand_distr = "0.5.1"
serde = { version = "1.0.222", features = ["derive"] }
tarpc = { version = "0.37.0", features = ["full"] }
tokio = { version = "1.47.1", features = ["io-std", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-tungstenite = "0.27.0"
