[package]
name = "argus"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "binance_stream"
path = "src/bin/binance_stream.rs"

[[bin]]
name = "binance_webstreamworker"
path = "src/bin/binance_webstreamworker.rs"

[lib]
name="argus"
path="src/lib.rs"
crate-type=["cdylib", "rlib"]

[dependencies]
futures = "0.3.31"
futures-util = "0.3.31"
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
tungstenite = "0.27.0"
url = "2.5.7"
agora = { path = "../agora" }
serde = { version = "1.0.228", features = ["derive"] }
indoc = "2.0.6"
chrono = "0.4.42"
priority-queue = { version = "2.7.0", features = ["serde"] }
rand = "0.9.2"
