[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "atlas"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "ipywidgets>=8.1.7",
    "polars>=1.32.0",
    "streamlit>=1.50.0",
    "tqdm>=4.67.1",
]

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
