[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "atlas"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "holoviews>=1.21.0",
    "hvplot>=0.12.1",
    "ipywidgets>=8.1.7",
    "nbformat>=5.10.4",
    "plotly>=6.3.1",
    "polars>=1.32.0",
    "streamlit>=1.50.0",
    "tqdm>=4.67.1",
]

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
