[package]
name = "horoscope"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
futures-util = "0.3.31"
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
tungstenite = "0.27.0"
url = "2.5.7"
