[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "metis"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]
dependencies = [
    "dash>=3.2.0",
    "einops>=0.8.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "polars[gpu]>=1.32.3",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "xgboost>=3.1.0",
]

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu129"
