[package]
name = "mnemosyne"
version = "0.1.0"
edition = "2024"

[lib]
name="mnemosyne"
path="src/lib.rs"
crate-type=["cdylib", "rlib"]

[[bin]]
name = "binance-spot-trades"
path = "bin/binance-spot-trades.rs"

[[bin]]
name = "binance-futures-trades"
path = "bin/binance-futures-trades.rs"

[[bin]]
name = "dev"
path = "bin/dev.rs"

[dependencies]
anyhow = "1.0.100"
arrow = "56.2.0"
chrono = "0.4.42"
dirs = "6.0.0"
futures = "0.3.31"
lz4_flex = "0.11.5"
once_cell = "1.21.3"
parquet = "56.2.0"
polars = { version = "0.51.0", features = ["lazy", "parquet", "csv", "dtype-date", "strings", "semi_anti_join"] }
pyo3 = "0.26.0"
quick-xml = "0.38.3"
rand = "0.9.2"
rayon = "1.11.0"
regex = "1.12.1"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
walkdir = "2.5.0"
zip = "6.0.0"
