[project]
name = "mnemosyne"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
polars = {version = "1.32.3", extras = ["gpu"]}
ipykernel = "^6.30.1"
graphviz = "^0.21"
joblib = "^1.5.2"
maturin = {extras = ["patchelf"], version = "^1.9.6"}
atlas = {path = "../atlas", develop = true}

[tool.poetry.group.dev.dependencies]
maturin = "^1.9.6"

[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]


[[tool.poetry.source]]
name = "nvidia"
url = "https://pypi.nvidia.com"
priority = "explicit"