[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "mnemosyne"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]
dependencies = [
    "atlas",
    "polars>=1.32.0",
    "ipykernel>=6.30.0",
    "graphviz>=0.21",
    "joblib>=1.5.0",
    "numpy>=2.3.3",
]

[tool.uv.sources]
atlas = { workspace = true }

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "ipykernel>=7.0.0",
]
