[package]
name = "agora"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "metaserver"
path = "src/bin/metaserver.rs"

[[bin]]
name = "metaclient"
path = "src/bin/metaclient.rs"

[lib]
name = "agora"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
bincode = { version = "2.0.1", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
futures = "0.3.31"
rand = "0.9.2"
rand_distr = "0.5.1"
serde = { version = "1.0.222", features = ["derive"] }
tarpc = { version = "0.37.0", features = ["full"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
