[package]
name = "trial"
version = "0.1.0"
edition = "2024"

[lib]
name = "tarpc_example"
path = "src/lib.rs"

[[bin]]
name = "tarpc_main"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
futures = "0.3.31"
opentelemetry = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic", "tonic"] }
opentelemetry_sdk = "0.30.0"
rand = { version = "0.9.2", features = ["std_rng"] }
rand_distr = "0.5.1"
tarpc = { version = "0.37.0", features = ["serde-transport", "serde-transport-json", "tcp"] }
tokio = { version = "1.47.1", features = ["macros", "net", "rt-multi-thread", "time"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
